--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 basic_settings:
-  site_title: Kefan
+  site_title: Kefan:)
   favicon_image: /images/icon.png
 
 header_settings:
@@ -10,31 +10,31 @@ menu_settings:
   menu_items:
     - title: 'Projects'
       url: '/'
-    - title: 'Blog'
+    - title: 'MyDay'
       url: '/blog/'
     - title: 'About'
-      url: '/about'
-    - title: 'Contact'
-      url: '/contact'
+      url: '/about/'
+    # - title: 'Contact'
+    #   url: '/contact/'
 
 footer_settings:
-  footer_tagline: Board – a stylish full-width masonry grid Jekyll theme
+  footer_tagline: The past is never dead. It's not even past.
 
 grid_settings:
-  overlay_opacity: 0.8
+  overlay_opacity: 0.2
   grid_spacing: 20
   content_alignment: bottom
 
 contact_settings:
   form_action: ''
-  confirmation_url: '/thanks'
+  confirmation_url: '/thanks/'
   email_subject: 'Contact form submission'
   send_button_text: 'Send Message'
 
 social_settings:
   facebook_url: ''
   twitter_url: ''
-  instagram_url: ''
+  instagram_url: 'https://www.instagram.com/kef_chen/'
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
@@ -49,7 +49,7 @@ social_settings:
   dribbble_url: ''
   behance_url: ''
   deviantart_url: ''
-  github_url: ''
+  github_url: 'https://github.com/chenkoufan'
   reddit_url: ''
   flickr_url: ''
   etsy_url: ''
@@ -57,7 +57,7 @@ social_settings:
   soundcloud_url: ''
   spotify_url: ''
   bandcamp_url: ''
-  linkedin_url: ''
+  linkedin_url: 'https://www.linkedin.com/in/kefan-chen-b251b528b/'
 
 color_settings:
   background_color: '#ffffff'
