--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 site: Kefan_Chen Arch
 
-url: https://chenkoufan.github.io/Kefan_Page/
-baseurl: "/Kefan_Page"
+url: 
+baseurl: 
 
 collections:
   pages:
