--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -18,7 +18,7 @@ menu_settings:
     #   url: '/contact'
 
 footer_settings:
-  footer_tagline: Man, what can I say? -coming soon
+  footer_tagline: Man, what can I say? -coming soon💤
 
 grid_settings:
   overlay_opacity: 0.2
