--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 site: Kefan_Chen Arch
 
-url: https://chenkoufan.github.io/Kefan_Page
-baseurl: /Kefan_Page
+# url: https://chenkoufan.github.io/Kefan_Page
+# baseurl: /Kefan_Page
+url: "https://kefan-page.pages.dev"
+baseurl: ""
 
 collections:
   pages:
