keep could deploy on github

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 site: Kefan_Chen Arch
 
-# url: https://chenkoufan.github.io/Kefan_Page
-# baseurl: /Kefan_Page
-url: "https://kefan-page.pages.dev"
-baseurl: ""
+url: https://chenkoufan.github.io/Kefan_Page
+baseurl: /Kefan_Page
+# url: "https://kefan.pages.dev"
+# baseurl: ""
 
 collections:
   pages:
