--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ site: Kefan_Chen Arch
 
 url: https://chenkoufan.github.io/Kefan_Page
 baseurl: /Kefan_Page
-# url: "https://kefan.pages.dev"
+# url: "https://kefan-page.pages.dev"
 # baseurl: ""
 
 collections:
