--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 site: Kefan_Chen Arch
 
-url: https://chenkoufan.github.io/Kefan_Page
+#url: https://chenkoufan.github.io/Kefan_Page
 baseurl: /Kefan_Page
 # url: "https://kefan-page.pages.dev"
 # baseurl: ""
