--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Install and Build 🔧
         run:  |
          bundle install
-         bundle exec jekyll build --baseurl "/" --url "https://kefan-page-git.pages.dev/"
+         bundle exec jekyll build --baseurl "/" 
 
       - name: Deploy 🚀
         if: github.event_name != 'pull_request'
